--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 <body>
     
-<h1>Alurabooks</h1>
+<header class="cabeçalho">
+    <span class="cabeçalho_menu-hamburguer"></span>
+<img src="img/Logo.svg" alt="logo da Alurabooks">
+   <a href="#"><img src="img/Favoritos.svg"></a>
+   <a href="#"><img src="img/Compras.svg"></a>
+   <a href="#"><img src="img/Usuário.svg"></a>
+</header>
+
 
 </body>
 </html>
