--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 <body>
     
 <header class="cabeçalho">
+    <div class="container">
     <span class="cabeçalho_menu-hamburguer"></span>
 <img src="img/Logo.svg" alt="logo da Alurabooks">
-   <a href="#"><img src="img/Favoritos.svg"></a>
-   <a href="#"><img src="img/Compras.svg"></a>
-   <a href="#"><img src="img/Usuário.svg"></a>
+</div>
+   <a href="#"><img src="img/Favoritos.svg" alt="Meus Favoritos"></a>
+   <a href="#"><img src="img/Compras.svg" alt="Carrinhos de compras"></a>
+   <a href="#"><img src="img/Usuário.svg" alt="Meu perfil"></a>
 </header>
 
 
