--- a/index.html
+++ b/index.html
@@ -11,7 +11,28 @@
     
 <header class="cabeçalho">
     <div class="container">
+        <input type="checkbox" id="menu" class="container_botao">
+        <label for="menu"></label>
     <span class="cabeçalho_menu-hamburguer"></span>
+</label>
+<ul class="lista-menu"></ul>
+<li class="lista-menu__titulo">categorias</li>
+<li class="lista-menu__item">
+    <a href="#" class="lista-menu__link">Programação</a>
+</li>
+<li class="lista-menu__item">
+    <a href="#" class="lista-menu__link">Front-end</a>
+</li>
+<li class="lista-menu__item">
+    <a href="#" class="lista-menu__link">Infraestrutura</a>
+</li>
+<li class="lista-menu__item">
+    <a href="#" class="lista-menu__link">Business</a>
+</li>
+<li class="lista-menu__item">
+    <a href="#" class="lista-menu__link">Design & UX</a>
+</li>
+</ul>
 <img src="img/Logo.svg" alt="logo da Alurabooks">
 </div>
    <a href="#"><img src="img/Favoritos.svg" alt="Meus Favoritos"></a>
